[package]
name = "dwm-status"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
sysinfo = "0.25"

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
